Get back to old java 8 version (hopefully now)